--- a/index.html
+++ b/index.html
@@ -34,6 +34,23 @@
     <span>
     </span>
   </div>
+  <!-- 登录界面 -->
+  <div id="Sign">
+    <div class="hea">
+      <span><a href="">登录</a></span>
+      <span><a href="#">注册</a></span>
+    </div>
+    <div class="boy">
+      <div>UserName:</div>
+      <input type="text">
+      <div>PassWord:</div>
+      <input type="text"></div>
+      <div class="but">
+        <button>登录</button>
+      </div>
+      <!-- 注册 -->
+      
+  </div>
   <!-- 时间 -->
   <div id="box">
     <p>中国&nbsp;&nbsp;&nbsp;时间</p>
